# CrewAI-Project

./: .dockerignore  .gitignore  .pypirc  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  publish-crewai-images.ps1  pyproject.toml  requirements-agents.txt  requirements.txt  test-chromadb.ps1  test_api.py  test_endpoints.py  test_metrics.py  tests.http
api/: main.py
chromadb/: dockerfile
crewai/: agents.py  crew.py  rag_store.py  tasks.py  tools.py
crewai-scripts/: audit-crewai.ps1  autoheal-crewai.ps1  backup-crewai.ps1  benchmark-crewai.ps1  compliance-crewai.ps1  cost-crewai.ps1  deploy-crewai.ps1  diagnostic-crewai.ps1  disaster-crewai.ps1  etrics-crewai.ps1  fullcycle-crewai.ps1  health-crewai.ps1  logs-crewai.ps1  monitor-crewai.ps1  redeploy-crewai.ps1  reset-chroma.ps1  restore-crewai.ps1  rollback-crewai.ps1  runner-crewai.ps1  scaling-crewai.ps1  security-crewai.ps1  stress-crewai.ps1  test_metrics.ps1
docs/: Passo-a-passo-PowerShell.md  README-FINALIZAÇÃO.md  README_NUVEM.md  README_TESTES.md  README_deploy-gke.md
k8s/: agents-deployment.yaml  agents-service.yaml  alertmanager-deployment.yaml  api-deployment.yaml  api-service.yaml  chroma-deployment.yaml  chroma-pvc.yaml  cluster-issuer.yaml  crewai-agents-deployment.yaml  crewai-api-deployment.yaml  crewai-chromadb-deployment.yaml  crewai-mlflow-deployment.yaml  deployment.yaml  grafana-deployment.yaml  hpa-agents.yaml  hpa-api.yaml  hpa-crewai-api.yaml  ingress.yaml  mlflow-pvc.yaml  pdb-agents.yaml  pdb-api.yaml  pdb-chroma.yaml  pdb-grafana.yaml  pdb-mlflow.yaml  pdb-prometheus.yaml  (+2 more)
(+36 files in other folders)
